# Full-Stack-TODO-App-Phase-2

./: .dockerignore  .env  .gitignore  README.md  TROUBLESHOOTING.md  api_spec.json  docker-compose.yml
.claude/: settings.local.json
.qwen/agents/: AIOpsAgent.md  ContainerAgent.md  ConversationAgent.md  IntentParserAgent.md  KubernetesAgent.md  MCPInvokerAgent.md  SpecOrchestratorAgent.md  TodoManagerAgent.md  UserContextAgent.md
.specify/memory/: constitution.md
backend/: .gitignore  Dockerfile  initialize_db.py  pyproject.toml  requirements.txt  reset_db.py  test_db.py  todo_local.db
backend/src/: main.py
backend/src/agents/: orchestrator.py
backend/src/api/: deps.py
backend/src/api/api_v1/: api.py  auth.py  tasks.py  user_routes.py
backend/src/core/: config.py  database.py
backend/src/mcp_server/: tools.py
backend/src/middleware/: auth.py
backend/src/models/: __init__.py  activity_log.py  conversation.py  message.py  task.py  user.py
backend/src/repositories/: __init__.py  activity_log_repository.py  task_repository.py  user_repository.py
backend/src/schemas/: task.py  user.py
backend/src/utils/: conversation_manager.py  dapr_publisher.py  jwt.py  message_validator.py  rate_limiter.py  validation.py
backend/tests/: test_basic.py  test_tasks.py
frontend/: .gitignore  README.md  middleware.ts  package-lock.json  package.json  tailwind.config.js
frontend/app/: layout.tsx  page.tsx
frontend/app/tasks/: page.tsx
frontend/hooks/: useAuth.ts  useTasks.ts  useWebSocket.ts
frontend/lib/: api.ts  auth.ts  types.ts
helm-charts/: README.md
(+152 files in other folders)
